--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <section class="banner">
         <img src="./img/logo.png" alt="" class="logo">
         <div class="banner-text">
-            <h1>Birgunj Lekhapadhi Office pvt.ltd</h1>
+            <h1>Birgunj Lekhapadhi Sewa Kendra</h1>
             <p>It's Make easy to your property for buying and selling.</p>
             <div class="banner-btn">
                 <a href=""><span></span> Find Out</a>
